--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,21 +1,23 @@
-<h1><%= pluralize(@groups.count ,'Group') %> </h1>
-<h3><%= pluralize(@growers.count,'Grower') %>  <%= pluralize(@pmus.count,'Field')%> 
-    <%= pluralize(@pmus.sum(:expected_production),'Ton')%></h3>
+
+<div class="jumbotron vertical-center">
+
+  <h2><%= pluralize(@groups.count ,'Group') %> </h2>
+<h3><%= pluralize(@growers.count,'Grower') %> <h3>
+
+<h3> <%= pluralize(@pmus.count,'Field')%> </h3>
+  <h3><%= pluralize(@pmus.sum(:expected_production),'Ton')%></h3>
+</div>
+  <%=link_to("Add new Group",new_group_path , class:"btn btn-link")%>
 
 
-
-
- <ul>
+ <ul class="list-unstyled">
  	<% @groups.each do |group|%>
  	<li>
- 		<strong>
- 			<%= link_to(group.name ,group_path(group)) %>
- 		</strong> 
+          <%= link_to "#{group.name} #{group.growers.count}g #{group.pmus.count}f-",group_path(group)%>
  		  <%= group.growers.count(@group) %> Growers
  		  <%= group.pmus.count%> Fields
  		  <%=group.pmus.sum(:expected_production)%> Tons</li>
  	<% end%>
  </ul>
  <div>
-<%=link_to("Add new Group",new_group_path)%>
 </div>
