--- a/app/views/growers/index.html.erb
+++ b/app/views/growers/index.html.erb
@@ -7,9 +7,8 @@
 <h5><%=pluralize(@growers.count,"Grower") %></h5>
 </div>
 
+<table class="table">
 
-
-<table>
 	<tr><th>Name</th><th>Fields</th><th>Tons</th></tr>
 
 
@@ -22,7 +21,6 @@
 	</tr>
 	<%end%>
 </table>
-
 
 
 
