--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,8 @@
+<%= link_to 'New Project', new_project_path,class:"btn btn-link" %>
+
 <h1>Listing projects</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Produce</th>
@@ -28,4 +30,3 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
