--- a/app/views/growers/edit.html.erb
+++ b/app/views/growers/edit.html.erb
@@ -11,7 +11,7 @@
 <p><%= f.label :ggn%></p>
 <p><%= f.text_field :ggn%></p>
 <p>
-<%=f.submit%>  | <%=link_to "Cancel",group_grower_path(@group,@grower)
+<%=f.submit class:"btn btn-default"%>  | <%=link_to "Cancel",group_grower_path(@group,@grower)
 %>
 </p>
 <%end%>
