--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,95 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Gap" %></title>
-    <%= csrf_meta_tags %>
+    <%= render 'layouts/head'%>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <![endif]-->
-
-    <%= stylesheet_link_tag "application", :media => "all" %>
-
-    <!-- For third-generation iPad with high-resolution Retina display: -->
-    <!-- Size should be 144 x 144 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
-
-    <!-- For iPhone with high-resolution Retina display: -->
-    <!-- Size should be 114 x 114 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
-
-    <!-- For first- and second-generation iPad: -->
-    <!-- Size should be 72 x 72 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
-
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <!-- Size should be 57 x 57 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-
-    <!-- For all other devices -->
-    <!-- Size should be 32 x 32 pixels -->
-    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-
-    <%= javascript_include_tag "application" %>
-  </head>
   <body>
 
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-           </a>
-           <a class="brand" href="#">Gap</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Users", "/path1"  %></li>
-              <li><%= link_to "Pricing", "/path2"  %></li>
-              <li><%= link_to "About Us", "/path3"  %></li>
-            </ul>
-            <div id="user_nav" class = 'pull-right'>
-                <% if user_signed_in? %>
-                Logged in as <strong><%=current_user.email%> <%=current_user.id%> </strong>
-                <%=link_to "Edit Profile",edit_user_registration_path%>
-                |
-                <%= link_to "Logout",destroy_user_session_path,method: :delete%>
-                <%else%>
-                <%=link_to "Sign up",new_user_registration_path %>
-                <%=link_to "Login",new_user_session_path %>
-                <%end%>
-              </div>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    <%=render 'layouts/navbar'%>
 
-    <div class="container-fluid">
-      <div class="row-fluid">
-
-       
-
+    <div class="container">
+       <div class="row">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+          <%=render 'layouts/leftsidebar'%>
+          </div>
+        <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
           <%= bootstrap_flash %>
           <%= yield %>
+          </div>
+        </div><!--/row-->
 
-      </div><!--/row-->
+      <div class="row">
+         <footer style="color:#F0F0F0;background:#237CBE;">
+         <p>&copy; instaGAP 2014</p>
+         </footer>
 
-      <footer style="color:#F0F0F0;background:#237CBE;">
-        <p>&copy; instaGAP 2014</p>
-      </footer>
-
-      <div id="urhere">
-    <%=debug(params)if Rails.env.development?%>
-  </div>
-
+         <div id="urhere">
+         <%=debug(params)if Rails.env.development?%>
+         </div>
     </div> <!-- /container -->
-
-    
-
   </body>
 </html>
