--- a/app/views/pmus/_form.html.erb
+++ b/app/views/pmus/_form.html.erb
@@ -19,23 +19,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :address,"PMU Code" %>
+    <%= f.label :address %>
     <%= f.text_field :address  %>
   </div>
 
   
-  <div class="field">
-    <%= f.label :produce %>
-    <%= f.text_field :produce %>
-  </div>
-  <div class="field">
-    <%= f.label :variety %>
-    <%= f.text_field :variety %>
-  </div>
 
 
-
-  
   <div class="field">
     <%= f.label :nearest_village %>
     <%= f.text_field :nearest_village %>
@@ -45,35 +35,16 @@
     <%= f.text_field :location %>
   </div>
   <div class="field">
-    <%= f.label :longitude %>
-    <%= f.text_field :longitude %>
-  </div>
-  <div class="field">
-    <%= f.label :latitude %>
-    <%= f.text_field :latitude %>
+    <%= f.hidden_field :longitude %>
+    <%= f.hidden_field :latitude %>
   </div>
 
-  
-  <div class="field">
-    <%= f.label :plantation_year %>
-    <%= f.number_field :plantation_year %>
-  </div>
-  <div class="field">
-    <%= f.label :number_of_trees %>
-    <%= f.number_field :number_of_trees %>
-  </div>
   <div class="field">
     <%= f.label :area %>
     <%= f.number_field :area %>
   </div>
-  <div class="field">
-    <%= f.label :expected_production %>
-    <%= f.number_field :expected_production %>
-  </div>
-  <div class="field">
-    <%= f.label :ehd,"Est Harvest Day"%>
-    <%= f.date_select :ehd %>
-  </div>
+
+
 
   <div class="field">
     <% hidden_field_tag "pmu[facility_ids][]",nil %>
@@ -84,10 +55,7 @@
   <% end %>
   </div>
 
-  <div class="field">
-    <%=f.check_box :ggcert %>
-    <%= f.label :ggcert ,"globalGAP certification"%>
-  </div>
+
   
 
   <div class="actions">
